# data-cleaning-environment

./: .dockerignore  .gitignore  .hfignore  Dockerfile  README.md  __init__.py  client.py  datasets.py  graders.py  inference.py  models.py  openenv.yaml  pyproject.toml
baseline/: __init__.py  inference.py
server/: Dockerfile  HF_README.md  app.py  environment.py  requirements.txt  rewards.py
tests/: test_environment.py
